force-app/main/default/objects/TaxNumber__c/TaxNumber__c.object-meta.xml
<CustomObject>
    <description>Stores the Tax Numbers Identification of the Account. It is issued by each country.</description>
    <label>Tax Number</label>
    <nameField>
        <displayFormat>TN-{0000000000}</displayFormat>
        <label>Tax Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>