force-app/main/default/objects/TaxNumber__c/fields/mdr_AccountId__c.field-meta.xml
<CustomField>
    <fullName>mdr_AccountId__c</fullName>
    <description>Master Detail to Account object</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Numbers</relationshipLabel>
    <relationshipName>TaxNumbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>