force-app/main/default/objects/TaxNumber__c/fields/txt_TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>txt_TaxCategory__c</fullName>
    <description>Specify the country of the Tax Number for this account</description>
    <label>Tax Category</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>