force-app/main/default/objects/TaxNumber__c/fields/txt_TaxNumber__c.field-meta.xml
<CustomField>
    <fullName>txt_TaxNumber__c</fullName>
    <description>Identification number issued by the tax authority</description>
    <label>Tax Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>