force-app/main/default/objects/TaxNumber__c/validationRules/Tax_Number_category_not_duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Number_category_not_duplicate</fullName>
    <active>false</active>
    <errorConditionFormula>OR (ISNEW(), ISCHANGED( txt_TaxCategory__c ))</errorConditionFormula>
    <errorMessage>Duplicate Tax Category</errorMessage>
</ValidationRule>